--- a/.env
+++ b/.env
@@ -1,4 +1,10 @@
 NODE_ENV=development
 PORT=8080
 
-MONGO_DB_URL=
+MONGO_DB_URL= mongodb+srv://admin:admin@cluster0.sxxm8.mongodb.net/jwtnodejs?retryWrites=true&w=majority&appName=Cluster0
+
+JWT_ACCESS_SECRET= djsfhsd123123@@@FĐSFdfdsfjsdflkdsfkdsjfsa12312
+JWT_REFRESH_SECRET= DSFSDFSDFDFIUJK213127DJFHSD@DIFHSD
+
+JWT_ACCESS_EXPIRE = 1h
+JWT_REFRESH_EXPIRE = 30d
