--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "express": "4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "8.4.4",
-    "ms": "^2.1.3"
+    "ms": "^2.1.3",
+    "mysql2": "^3.12.0"
   },
   "devDependencies": {
-    "nodemon": "3.1.4"
+    "nodemon": "3.1.4",
+    "typescript": "^5.8.2"
   }
 }
