--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "8.4.4",
     "ms": "^2.1.3",
-    "mysql2": "^3.12.0"
+    "mysql2": "^3.12.0",
+    "path-to-regexp": "^8.2.0"
   },
   "devDependencies": {
     "nodemon": "3.1.4",
