--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "mongoose": "8.4.4",
     "ms": "^2.1.3",
     "mysql2": "^3.12.0",
-    "path-to-regexp": "^8.2.0"
+    "path-to-regexp": "^8.2.0",
+    "sequelize": "^6.37.5",
+    "sequelize-paginate": "^1.1.6"
   },
   "devDependencies": {
     "nodemon": "3.1.4",
