--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./src/server.js",
-    "start": "nodemon ./src/server.js"
+    "start": "node ./src/server.js",
+    "build": "copyfiles -u 1 src/**/* dist/"
   },
   "keywords": [
     "nodejs",
@@ -29,11 +30,10 @@
     "mongoose": "8.4.4",
     "ms": "^2.1.3",
     "mysql2": "^3.12.0",
-    "path-to-regexp": "^8.2.0",
-    "sequelize": "^6.37.5",
-    "sequelize-paginate": "^1.1.6"
+    "path-to-regexp": "^8.2.0"
   },
   "devDependencies": {
+    "copyfiles": "^2.4.1",
     "nodemon": "3.1.4",
     "typescript": "^5.8.2"
   }
