--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.2",
     "bcrypt": "^5.1.1",
     "cookie": "^1.0.2",
     "cookie-parser": "^1.4.7",
