--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "8.4.4",
     "ms": "^2.1.3",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "path-to-regexp": "^8.2.0",
     "sequelize": "^6.37.6"
