them quan ly branch va cashRegister

--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "react"
   ],
   "author": {
-    "name": "Hỏi Dân IT",
-    "url": "https://hoidanit.vn"
+    "name": "",
+    "url": ""
   },
   "license": "ISC",
   "dependencies": {
