--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0",
     "path-to-regexp": "^8.2.0",
+    "redis": "^4.7.0",
     "sequelize": "^6.37.6"
   },
   "devDependencies": {
