--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ejs": "3.1.10",
     "express": "4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "8.4.4",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
